# rockos-vlc

./: Makefile.am  configure.ac
include/: vlc_fourcc.h  vlc_plugin.h
modules/codec/: Makefile.am
modules/codec/avcodec/: es_drm.c  va.c  video.c
modules/demux/avformat/: mux.c
modules/hw/esdrm/: Makefile.am  vlc_esdrm.c  vlc_esdrm.h
modules/video_output/: Makefile.am
modules/video_output/opengl/: converter_drm_prime.c  fragment_shaders.c  vout_helper.c
src/misc/: fourcc.c
